--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v1
     - run: 'echo Hello'
+    - run: npm ci
     - uses: tool3/bump@master
       with:
         github_token: ${{ secrets.GP_TOKEN }}
