--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
+  "name": "bump",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "Bump Action",
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js",
@@ -10,19 +10,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+git@github.com:tool3/bump.git"
   },
   "keywords": [
     "GitHub",
     "Actions",
     "JavaScript"
   ],
-  "author": "GitHub",
+  "author": "Tal Hayut",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/tool3/bump/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/tool3/bump#readme",
   "dependencies": {
     "@actions/core": "^1.1.1",
     "@actions/exec": "^1.0.2"
