--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -7,8 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-node@v1
-    - uses: tool3/bump@master
     - runs: 'npm -v'
+    - uses: tool3/bump@master
+    - runs: 'echo ${GITHUB_REF}'
       with:
         github_token: ${{ secrets.GP_TOKEN }}
         user: 'tal hayut'
