--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -7,10 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/setup-node@v1
-    - runs: 'npm -v'
+    - run: 'npm -v'
     - uses: tool3/bump@master
-    - runs: 'echo ${GITHUB_REF}'
       with:
         github_token: ${{ secrets.GP_TOKEN }}
-        user: 'tal hayut'
-        email: 'tal.hayut.dev@gmail.com'
+        user: 'T hayut'
+        email: 'tal.dev@gmail.com'
