--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -6,7 +6,7 @@ jobs:
   bump:
     runs-on: ubuntu-latest
     steps:
-    - uses: "actions/checkout@v1"
+    - uses: actions/checkout@master
     - uses: tool3/bump@master
       with:
         github_token: ${{ secrets.GP_TOKEN }}
