--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -7,11 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: tool3/bump@chore/test
+    - uses: tool3/bump@master
       id: bump
       with:
         github_token: ${{ secrets.GP_TOKEN }}
-        branch: 'chore/test'
     - name: checkout output
       run: echo "${{ steps.bump.outputs.version }}"
 
