--- a/action.yml
+++ b/action.yml
@@ -1,28 +1,28 @@
-name: 'Bump Action'
-description: 'Bump a version based on commit message, tag it, and push package.json update to repository'
+name: "Bump Action"
+description: "Bump a version based on commit message, tag it, and push package.json update to repository"
 inputs:
-  user:  
-    description: 'the git user to push the package.json version update'
+  user:
+    description: "the git user to push the package.json version update"
     required: false
-  email:  
-    description: 'the git email to push the package.json version update'
+  email:
+    description: "the git email to push the package.json version update"
     required: false
-  branch:  
-    description: 'the git email to push the package.json version update'
-    default: 'master'
+  branch:
+    description: "the git email to push the package.json version update"
+    default: "master"
     required: false
-  github_token: 
-    description: 'github access token'
+  github_token:
+    description: "github access token"
     required: true
   unrelated:
-    description: 'merge unrelated histories'
+    description: "merge unrelated histories"
     required: false
 outputs:
-  version: # output will be available to future steps 
-    description: 'The version being tagged and pushed'
+  version: # output will be available to future steps
+    description: "The version being tagged and pushed"
 runs:
-  using: 'node12'
-  main: 'dist/index.js'
+  using: "node16"
+  main: "dist/index.js"
 branding:
-  icon: 'package'  
-  color: 'red'
+  icon: "package"
+  color: "red"
