--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: build
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-    - run: yarn
-    - run: yarn build
+      - uses: actions/checkout@v2
+      - name: build
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+      - run: yarn
+      - run: yarn build
