--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
   },
   "devDependencies": {
     "@zeit/ncc": "^0.20.5",
-    "eslint": "^6.3.0",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0"
+    "husky": "^3.1.0"
   },
   "husky": {
     "hooks": {
