--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "actions-toolkit": "^2.2.0"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "0.38.1",
     "husky": "^3.1.0"
   },
   "husky": {
