fix: build script

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           node-version: "20"
       - run: npm ci
-      - run: npm run build build
+      - run: npm run build
