--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,6 @@ jobs:
       - name: build
         uses: actions/setup-node@v4
         with:
-          node-version: "lts"
+          node-version: "20"
       - run: npm ci
       - run: npm run build
