--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/tool3/bump#readme",
   "dependencies": {
-    "@actions/core": "^1.9.1",
-    "@actions/exec": "^1.0.2",
-    "@actions/github": "^2.0.0",
-    "actions-toolkit": "^2.2.0"
+    "@actions/core": "1.10.1",
+    "@actions/exec": "1.1.1",
+    "@actions/github": "6.0.0",
+    "actions-toolkit": "6.0.1"
   },
   "devDependencies": {
     "@vercel/ncc": "0.38.1",
