node and ncc upgrade (#23)
* chore: upgrading node

* fix: build script

* fix: use lts

* fix: use 20

* fix: safe destructure

* fix: upgrade to latest actions:

* chore: use latest node #minor

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bump",
-  "version": "1.1.9",
+  "version": "1.4.0",
   "description": "Bump Action",
   "main": "index.js",
   "scripts": {
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/tool3/bump#readme",
   "dependencies": {
-    "@actions/core": "^1.9.1",
-    "@actions/exec": "^1.0.2",
-    "@actions/github": "^2.0.0",
-    "actions-toolkit": "^2.2.0"
+    "@actions/core": "1.10.1",
+    "@actions/exec": "1.1.1",
+    "@actions/github": "6.0.0",
+    "actions-toolkit": "6.0.1"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "0.38.1",
     "husky": "^3.1.0"
   },
   "husky": {
